examples/v1alpha2/cross-namespace-routing/gateway.yaml
# Used in
# - site-src/v1alpha2/guides/multiple-ns.md
# - site-src/v1alpha2/guides/traffic-splitting.md
# - site-src/v1alpha2/guides/http-routing.md
# - site-src/v1alpha2/guides/tls.md
# - site-src/v1alpha2/guides/simple-gateway.md

apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: shared-gateway
  namespace: infra-ns
spec:
  gatewayClassName: shared-gateway-class
  listeners:
  - name: https
    hostname: "foo.example.com"
    protocol: HTTPS
    port: 443
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            shared-gateway-access: "true"
    tls:
      certificateRefs:
      - name: foo-example-com
