examples/v1alpha2/cross-namespace-routing/store-route.yaml
# Used in
# - site-src/v1alpha2/guides/multiple-ns.md
# - 
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: store
  namespace: store-ns
spec:
  parentRefs:
  - name: shared-gateway
    namespace: infra-ns
  rules:
  - matches:
    - path:
        value: /store
    backendRefs:
    - name: store
      port: 8080
